--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 <head>
-    <header> Hello </header>
+    <header class="wp-brand-font"> Hello </header>
 </head>
 
 <body>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <p> From the other side. </p>
+    <div class="center"> 
+        <h1 class="font.ttf" > Welcome to my page </h1>
+        <p> From the other side. </p>
+    </div>
 </body>
